[gd_scene load_steps=14 format=3 uid="uid://c8ae7oqo560h4"]

[ext_resource type="Script" path="res://LoseScreen.gd" id="1_qlw3j"]
[ext_resource type="FontFile" uid="uid://dy03qa2n13w83" path="res://fonts/GrapeSoda.ttf" id="2_cxea2"]
[ext_resource type="Texture2D" uid="uid://cqv3kfbev5jxk" path="res://assets/Lose Screen/main_menu_button_idle.png" id="3_pnlvt"]
[ext_resource type="Texture2D" uid="uid://d3tw021wkjmh6" path="res://assets/Lose Screen/main_menu_button_hover.png" id="4_7y167"]
[ext_resource type="Texture2D" uid="uid://ckuj7r3f8orf6" path="res://assets/Lose Screen/robitanimationsheet.png" id="5_e5moi"]

[sub_resource type="LabelSettings" id="LabelSettings_3ye2j"]
font = ExtResource("2_cxea2")
font_size = 32
font_color = Color(1, 0.0941176, 0.105882, 1)
outline_size = 3

[sub_resource type="LabelSettings" id="LabelSettings_v05p1"]
font = ExtResource("2_cxea2")

[sub_resource type="Animation" id="Animation_x6xgf"]
resource_name = "FadeIn"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeIn:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Robot:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(47, 104)]
}

[sub_resource type="Animation" id="Animation_oakyg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeIn:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Robot:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(47, 104)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Robot:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("GameOverText:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(72, 33)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("GameOverText:self_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("MainMenuButton:self_modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("MainMenuButton:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(137, 134)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("MainMenuButton/Label:self_modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_37ljm"]
resource_name = "ShowRobot"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Robot:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(46, 130), Vector2(47, 104)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Robot:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_85pbd"]
resource_name = "ShowGameOver"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GameOverText:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(72, 44), Vector2(72, 33)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GameOverText:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_odxku"]
resource_name = "ShowMainMenuButton"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MainMenuButton:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(137, 142), Vector2(137, 134)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MainMenuButton:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MainMenuButton/Label:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pipbs"]
_data = {
"FadeIn": SubResource("Animation_x6xgf"),
"RESET": SubResource("Animation_oakyg"),
"ShowGameOver": SubResource("Animation_85pbd"),
"ShowMainMenuButton": SubResource("Animation_odxku"),
"ShowRobot": SubResource("Animation_37ljm")
}

[node name="LoseScreen" type="Node2D"]
script = ExtResource("1_qlw3j")

[node name="Background" type="Sprite2D" parent="."]

[node name="TempBackground" type="ColorRect" parent="."]
offset_right = 240.0
offset_bottom = 160.0
color = Color(0.00295744, 0.411928, 0.566773, 1)

[node name="GameOverText" type="Label" parent="."]
self_modulate = Color(1, 1, 1, 0)
texture_filter = 1
offset_left = 72.0
offset_top = 33.0
offset_right = 222.0
offset_bottom = 65.0
text = "GAME OVER"
label_settings = SubResource("LabelSettings_3ye2j")

[node name="MainMenuButton" type="TextureButton" parent="."]
self_modulate = Color(1, 1, 1, 0)
texture_filter = 1
offset_left = 137.0
offset_top = 134.0
offset_right = 227.0
offset_bottom = 152.0
texture_normal = ExtResource("3_pnlvt")
texture_pressed = ExtResource("3_pnlvt")
texture_hover = ExtResource("4_7y167")

[node name="Label" type="Label" parent="MainMenuButton"]
self_modulate = Color(1, 1, 1, 0)
texture_filter = 1
layout_mode = 0
offset_right = 90.0
offset_bottom = 18.0
text = "Main Menu"
label_settings = SubResource("LabelSettings_v05p1")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Robot" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0)
texture_filter = 1
position = Vector2(47, 104)
texture = ExtResource("5_e5moi")
region_enabled = true
region_rect = Rect2(0, 0, 64, 100)

[node name="FadeIn" type="ColorRect" parent="."]
visible = false
offset_right = 240.0
offset_bottom = 160.0
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_pipbs")
}

[connection signal="pressed" from="MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
